@@ -62,5 +62,6 @@ wubi (9.04) UNRELEASED; urgency=low
   * Added finish pages
   * Added preliminary code to generate virtual disk files, to be completed
   * Added timezone detection
+  * Allocate disk space for virtual disks, to be tested
 
- -- Agostino Russo <agostino.russo@gmail.com>  Wed, 07 Jan 2009 00:19:53 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Wed, 07 Jan 2009 01:57:47 +0000
